# caesar-transfer

./: .env  Cargo.toml  LICENSE  README.md  Shuttle.toml  packets.proto  pull_request_template.md
.github/ISSUE_TEMPLATE/: development-issue-template.md
.github/workflows/: build_and_test_on_push.yml  publish.yml
caesar-cli/: Cargo.toml
caesar-cli/src/: config.rs  main.rs
caesar-cli/src/cli/: args.rs
caesar-core/: Cargo.toml
caesar-core/src/: lib.rs  shared.rs
caesar-core/src/receiver/: client.rs  http_client.rs  mod.rs
caesar-core/src/relay/: appstate.rs  client.rs  mod.rs  room.rs  server.rs  transfer.rs
caesar-core/src/sender/: client.rs  http_client.rs  mod.rs  util.rs
caesar-desktop/: Cargo.toml
caesar-mobile/: Cargo.toml
caesar-shuttle/: Cargo.toml
caesar-shuttle/src/: main.rs
caesar-tauri-angular/: angular.json  package-lock.json  package.json
caesar-tauri-angular/src/: index.html
caesar-tauri-angular/src-tauri/: Cargo.toml  tauri.conf.json
caesar-tauri-angular/src-tauri/capabilities/: main.json  mobile.json
caesar-tauri-angular/src-tauri/src/: lib.rs  main.rs
caesar-tauri-angular/src/app/: app.component.css  app.component.ts  app.routes.ts
caesar-tauri-angular/src/app/home/: home.component.css  home.component.html  home.component.ts
caesar-tauri-angular/src/app/receiver/: receiver.component.html  receiver.component.ts
caesar-tauri-angular/src/app/services/: storage.service.ts  tauri.service.ts
caesar-tauri-angular/src/assets/: file2.txt
caesar-tui/: Cargo.toml
caesar_cli/: Cargo.toml
caesar_cli/src/: cli.rs  command.rs  main.rs
caesar_core/: Cargo.toml
caesar_gui/: README.md  pubspec.yaml
caesar_gui/android/app/: build.gradle
caesar_gui/ios/Runner/: Info.plist
caesar_gui/ios/Runner.xcodeproj/: project.pbxproj
caesar_gui/lib/: main.dart
caesar_gui/lib/pages/: receive_screen.dart  send_screen.dart  waiting_screen.dart
caesar_gui/linux/: CMakeLists.txt  my_application.cc
caesar_gui/linux/flutter/: generated_plugins.cmake
caesar_gui/macos/Runner.xcodeproj/: project.pbxproj
caesar_gui/messages/: ressource.proto
caesar_gui/native/hub/: Cargo.toml
caesar_gui/native/hub/src/: lib.rs  sample_functions.rs
caesar_gui/test/: widget_test.dart
caesar_gui/web/: index.html  manifest.json
caesar_gui/windows/: CMakeLists.txt
caesar_gui/windows/flutter/: generated_plugins.cmake
caesar_gui/windows/runner/: Runner.rc  main.cpp
caesar_server/: Cargo.toml
docs/flutterdocs/: __404error.html  index.html  index.json  search.html
docs/flutterdocs/consts_consts/: Constants-class-sidebar.html  Constants-class.html  consts_consts-library-sidebar.html  consts_consts-library.html
docs/flutterdocs/main/: MyApp-class.html  MyHomePage-class.html  main-library.html  main.html
docs/flutterdocs/pages_receive_screen/: ReceiveScreen-class-sidebar.html  ReceiveScreen-class.html  ReceiveScreenState-class-sidebar.html  ReceiveScreenState-class.html  pages_receive_screen-library-sidebar.html  pages_receive_screen-library.html
docs/flutterdocs/pages_send_screen/: SendScreen-class-sidebar.html  SendScreen-class.html  SendScreenState-class-sidebar.html  SendScreenState-class.html  pages_send_screen-library-sidebar.html  pages_send_screen-library.html
docs/flutterdocs/pages_settings_screen/: SettingsScreen-class-sidebar.html  SettingsScreen-class.html  pages_settings_screen-library-sidebar.html  pages_settings_screen-library.html
docs/flutterdocs/pages_succes_screen/: pages_succes_screen-library.html
docs/flutterdocs/pages_transfer_screen/: TransferScreen-class-sidebar.html  TransferScreen-class.html  TransferScreenState-class-sidebar.html  TransferScreenState-class.html  pages_transfer_screen-library-sidebar.html  pages_transfer_screen-library.html
docs/flutterdocs/pages_waiting_screen/: WaitingScreen-class-sidebar.html  WaitingScreen-class.html  WaitingScreenState-class-sidebar.html  WaitingScreenState-class.html  pages_waiting_screen-library-sidebar.html  pages_waiting_screen-library.html
docs/rustdocs/: .rustc_info.json
docs/rustdocs/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
flutter_test_gui/: Cargo.toml  README.md  flutter_rust_bridge.yaml  pubspec.yaml
flutter_test_gui/android/app/: build.gradle
flutter_test_gui/integration_test/: simple_test.dart
flutter_test_gui/ios/Runner/: Info.plist
flutter_test_gui/ios/Runner.xcodeproj/: project.pbxproj
flutter_test_gui/lib/: main.dart
flutter_test_gui/lib/consts/: consts.dart
flutter_test_gui/lib/pages/: receive_screen.dart  send_screen.dart  settings_screen.dart  transfer_screen.dart  waiting_screen.dart
flutter_test_gui/linux/: CMakeLists.txt  my_application.cc
flutter_test_gui/linux/flutter/: generated_plugins.cmake
flutter_test_gui/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter_test_gui/macos/Runner.xcodeproj/: project.pbxproj
flutter_test_gui/rust_builder/: pubspec.yaml
flutter_test_gui/rust_builder/android/: build.gradle  settings.gradle
flutter_test_gui/rust_builder/ios/: rust_lib_flutter_test_gui.podspec
flutter_test_gui/rust_builder/linux/: CMakeLists.txt
flutter_test_gui/rust_builder/macos/: rust_lib_flutter_test_gui.podspec
flutter_test_gui/rust_builder/windows/: CMakeLists.txt
flutter_test_gui/web/: index.html  manifest.json
flutter_test_gui/windows/: CMakeLists.txt
flutter_test_gui/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
flutter_test_gui/windows/runner/: Runner.rc  main.cpp
flutter_test_lib/: Cargo.toml
flutter_test_lib/src/: frb_generated.rs
flutter_test_lib/src/api/: simple.rs
src/: args.rs  build.rs  http_client.rs  http_server.rs  main.rs  receiver.rs  sender.rs  server.rs  shared.rs  shuttle.rs
src/cli/: args.rs
src/error/: mod.rs
src/receiver/: client.rs  http_client.rs  mod.rs  receiver.rs
src/relay/: appstate.rs  client.rs  mod.rs  room.rs  server.rs  transfer.rs
src/sender/: client.rs  http_client.rs  mod.rs  sender.rs  server.rs  util.rs
src/transfer_info/: mod.rs  transfer_info.rs
(+1095 files in other folders)
