[package]
name = "caesar"
version = "0.0.1"
edition = "2021"
authors = ["Manuel Keidel", "Patryk Hegenberg", "Krzysztof Stankiewicz"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7.5"
rand = "0.8.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
env_logger = "0.11.3"
log = "0.4.21"
dotenv = { version = "0.15.0", features = ["clap"] }
tower-http = {version = "0.5.2", features = ["fs"]}
axum-client-ip = "0.6.0"
lazy_static = "1.4.0"
local-ip-address = "0.6.1"
sha2 = "0.10.8"
hex = "0.4.3"
