[package]
name = "caesar-cli"
version = "0.3.2"
edition = "2021"
authors = ["Manuel Keidel, Patryk Hegenberg, Krzysztof Stankiewicz"]

[[bin]]
name = "caesar"
path = "src/main.rs"

[dependencies]
caesar-core = { path = "../caesar-core" }
tokio = { version = "1.28.1", features = ["full"] }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = { version = "4.5.4", features = ["derive"] }
axum = { version = "0.7.5", features = ["ws"] }
axum-client-ip = "0.6.0"
confy = "0.6.1"
dotenvy = { version = "0.15.7", features = ["clap", "cli"] }
lazy_static = "1.4.0"
