[package]
name = "caesar-core"
version = "0.3.1"
edition = "2021"
build = "src/build.rs"
authors = ["Manuel Keidel", "Patryk Hegenberg", "Krzysztof Stankiewicz"]

# [lib]
# crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
futures-util = "0.3"
tungstenite = "0.21.0"
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = [
  "rustls-tls-webpki-roots",
] }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3.2", features = ["v4"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenv = { version = "0.15.0", features = ["clap", "cli"] }
clap = { version = "4.5.4", features = ["derive"] }
flume = { git = "https://github.com/zesterer/flume", rev = "80d19c49" }
prost = "0.12.4"
prost-types = "0.12.4"
base64 = "0.22.0"
url = "2.4.0"
p256 = { version = "0.13.2", features = ["ecdh"] }
hmac = "0.12.1"
sha2 = "0.10.7"
rand = { version = "0.8.5", features = ["getrandom"] }
aes-gcm = "0.10.3"
sanitize-filename = "0.5.0"
qr2term = "0.3.1"
axum = { version = "0.7.5", features = ["ws"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
axum-client-ip = "0.6.0"
local-ip-address = "0.6.1"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
headers = "0.4"
tower = { version = "0.4", features = ["util"] }
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
hex = "0.4.3"
openssl-sys = { version = "0.9.102", features = ["vendored"] }
# rinf = "6.8.0"
anyhow = "1.0.83"

[build-dependencies]
prost-build = "0.12.4"
