[package]
name = "caesar-tauri-angular"
version = "0.0.0"
description = "A Tauri App"
authors = ["Manuel Keidel"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "caesar_tauri_angular_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
log = "0.4"
env_logger = "0.11.3"
caesar-core = { path = "../../caesar-core" }
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

